<resources>
    <string name="app_name">My Application</string>
    <string name="QuestionGrouptext">Choose questions and hit practice</string>
    <string name="title">StudySMART</string>
    <string name="WelcomeText">Welcome!</string>
    <string name="NewButtonText">New</string>
    <string name="PracticeButtonText">Practice</string>
    <string name="EditButtonText">Edit</string>
    <string name="EditTemplateText">Edit Template</string>
    <string name="TemplateNameText">Template Name:</string>
    <string name="ReadyToStudyText">Ready to start studying?</string>
    <string name="SelectQuestionsText">Select Questions:</string>
    <string name="NewQuestionsText">Make a New Question</string>
    <string name="EditQuestionText">Edit Question:</string>
    <string name="SaveButtonText">Save</string>
    <string name="BackButtonText">Back</string>
    <string name="QuestionPracticeText">Question Practice</string>
    <string name="EnterSolutionText">Enter Solution:</string>
    <string name="CheckButtonText">Check</string>
    <string name="SolutionButtonText">Solution</string>
    <string name="SolutionText">Solution</string>
    <string name="RetryButtonText">Retry</string>
    <string name="NewQuestionButtonText">New Question</string>
    <string name="EditTemplateTitle">Edit Template</string>
    <string name="NameText">Name</string>
    <string name="QuesNameValue">Question Name:</string>
    <string name="EditQuestionTitle">Edit Question</string>
    <string name="Textbox">Text:</string>
    <string name="FixedConstant">Fixed Constants:</string>
    <string name="VariablesText">Variables:</string>
    <string name="equationsText">Equations:</string>
    <string name="FigureText">Figure (Optional):</string>
    <string name="AnswerText">Answer:</string>
    <string name="PrecisionText">Precision:</string>
    <string name="SolutionEditText">Solution:</string>
    <string name="DeleteQuestionButton">Delete Question</string>
    <string name="DoneButton">Done</string>
    <string name="DeleteTemplateButton">Delete Template</string>
    <string name="NewTemplateText">New Template</string>
    <string name="AnswerHint">Enter Answer Here</string>
    <string name="AccuracyText">Answer to "+question.getPrecision()+" for accuracy</string>


</resources>
