<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuestionPractice">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="490dp"
        android:layout_height="853dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.145">

        <Button
            android:id="@+id/BackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="16dp"
            android:text="@string/BackButtonText"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/QuestionPracticeText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.194"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/QuestionPracticeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="104dp"
            android:text="@string/QuestionPracticeText"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.579"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/questionText"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="75dp"
            android:layout_marginBottom="44dp"
            app:layout_constraintBottom_toTopOf="@+id/CheckButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/QuestionPracticeText"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/answerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="44dp"
            android:ems="10"
            android:hint="@string/AnswerHint"
            android:inputType="textPersonName|numberDecimal"
            app:layout_constraintBottom_toBottomOf="@+id/CheckButton"
            app:layout_constraintStart_toEndOf="@+id/EnterSolutionText"
            app:layout_constraintTop_toBottomOf="@+id/questionText" />

        <TextView
            android:id="@+id/EnterSolutionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/EnterSolutionText"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.248"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/questionText" />

        <Button
            android:id="@+id/CheckButton"
            android:layout_width="159dp"
            android:layout_height="49dp"
            android:layout_marginTop="316dp"
            android:layout_marginBottom="100dp"
            android:onClick="PerformCheckAnswer"
            android:text="@string/CheckButtonText"
            app:layout_constraintBottom_toTopOf="@+id/LinearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.773"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/questionText" />

        <LinearLayout
            android:id="@+id/LinearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="100dp"
            android:layout_marginTop="570dp"
            android:layout_marginEnd="75dp"
            android:layout_marginBottom="150dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <Button
                android:id="@+id/NewQuestionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:text="@string/NewQuestionButtonText" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="100dp"
            android:layout_marginTop="632dp"
            android:layout_marginEnd="75dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/LinearLayout">

            <Button
                android:id="@+id/RetryButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:text="@string/RetryButtonText" />

        </LinearLayout>

        <TextView
            android:id="@+id/AccuracyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="425dp"
            android:layout_marginTop="350dp"
            android:layout_marginBottom="25dp"
            android:text="@string/AccuracyText"
            app:layout_constraintBottom_toBottomOf="@+id/questionText"
            app:layout_constraintEnd_toStartOf="@+id/questionText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>