<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Constraint Layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="80dp"
        android:layout_height="45dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ReadyToStudyText"
        app:srcCompat="@android:drawable/star_off" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="80dp"
        android:layout_height="45dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="63dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.769"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ReadyToStudyText"
        app:srcCompat="@android:drawable/star_off" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="80dp"
        android:layout_height="45dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="63dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.398"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ReadyToStudyText"
        app:srcCompat="@android:drawable/star_off" />

    <TextView
        android:id="@+id/QuestionGroupText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="232dp"
        android:text="@string/QuestionGrouptext"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.593"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Button"
        tools:layout_editor_absoluteX="161dp"
        tools:layout_editor_absoluteY="551dp" />

    <TextView
        android:id="@+id/WelcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="167dp"
        android:layout_marginTop="113dp"
        android:layout_marginEnd="181dp"
        android:layout_marginBottom="335dp"
        android:text="@string/WelcomeText"
        android:textColor="@android:color/background_dark"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/QuestionGroupText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ReadyToStudyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="129dp"
        android:layout_marginEnd="129dp"
        android:layout_marginBottom="173dp"
        android:text="@string/ReadyToStudyText"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/QuestionGroupText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/WelcomeText"
        app:layout_constraintVertical_bias="0.3" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="80dp"
        android:layout_height="45dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="63dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ReadyToStudyText"
        app:srcCompat="@android:drawable/star_off" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="80dp"
        android:layout_height="45dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="63dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ReadyToStudyText"
        app:srcCompat="@android:drawable/star_off" />

</androidx.constraintlayout.widget.ConstraintLayout>